--- a/aplication.html
+++ b/aplication.html
@@ -30,6 +30,19 @@
             border: none;
             cursor: pointer;
         }
+        .signature {
+            margin-top: 50px;
+            text-align: left;
+        }
+        .signature-line {
+            margin-top: 60px;
+            border-top: 1px solid black;
+            width: 300px;
+        }
+        .signature-label {
+            margin-top: 5px;
+            font-size: 14px;
+        }
         @media print {
             #print-btn {
                 display: none;
@@ -69,6 +82,11 @@
             <p><span class="label">Name:</span> Dr. Susan Parker</p>
             <p><span class="label">Relationship:</span> Former Manager</p>
             <p><span class="label">Contact:</span> susan.parker@techsolutions.com</p>
+        </div>
+
+        <div class="signature">
+            <div class="signature-line"></div>
+            <div class="signature-label">Signature</div>
         </div>
     </div>
 
